# rswodlib

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
crates/combined-output/: Cargo.toml  README.md
crates/combined-output/src/: lib.rs
crates/generic-num/: Cargo.toml  README.md
crates/generic-num/src/: lib.rs  modinverse.rs
crates/loggedcmd/: Cargo.toml
crates/loggedcmd/src/: lib.rs
crates/partition/: Cargo.toml  README.md  build.rs
crates/partition/src/: lib.rs
crates/runcmd/: Cargo.toml
crates/runcmd/src/: lib.rs
crates/tokio-btn/: Cargo.toml
crates/tokio-buffered-tasks/: Cargo.toml
crates/tokio-lsg/: Cargo.toml
crates/tokio-lsg/src/: lib.rs
crates/tokio-nursery/: Cargo.toml  README.md
crates/tokio-nursery/src/: lib.rs
crates/tokio-received-stream/: Cargo.toml
crates/tokio-received-stream/src/: lib.rs
crates/tokio-shutdown-group/: Cargo.toml
crates/tokio-shutdown-group/src/: lib.rs
crates/tokio-worker-map/: Cargo.toml  README.md
crates/tokio-worker-map/src/: lib.rs
crates/tokio-worker-nursery/: Cargo.toml  README.md
crates/tokio-worker-nursery/src/: lib.rs
crates/unique-stream/: Cargo.toml  README.md
crates/unique-stream/src/: lib.rs
src/: cmd.rs  cmp_range.rs  cross_upto.rs  double_upto.rs  io.rs  jobstack.rs  lib.rs  math.rs  predicate_bsearch.rs  runcmd.rs  show_duration.rs  strings.rs  tokio.rs  utf8.rs
src/cmd/: loggedcmd.rs  runcmd.rs
src/io/: iter_chunks.rs  paragraphs.rs  read_up_to.rs
src/math/: divmod.rs  gcd.rs
src/strings/: chomp.rs  lines.rs  lines_keepends.rs  normalize_newlines.rs  partition.rs  quantify.rs  rscan.rs  rscan_some.rs  rspan.rs  rspan_some.rs  scan.rs  scan_some.rs  span.rs  span_some.rs  split_paragraphs.rs  starts_with_ignore_ascii_case.rs  string_lines.rs  trim_string.rs
src/strings/lines/: chomp.rs  lines_keepends.rs  newlines.rs  normalize_newlines.rs  split_paragraphs.rs  string_lines.rs  unlines.rs
src/tokio/: btn.rs  buffered_tasks.rs  received_stream.rs  shutdown_group.rs  unique_stream.rs
src/utf8/: str_decoder.rs
