[package]
name = "rswodlib"
version = "0.1.0"
edition = "2021"
description = "Assorted Rust utility functions"
authors = ["John Thorvald Wodder II <rswodlib@varonathe.org>"]
repository = "https://github.com/jwodder/rswodlib"
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]
automod = "1.0.8"
num-traits = "0.2.15"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
rstest = { version = "0.17.0", default-features = false }
