[package]
name = "rswodlib"
version = "0.1.0"
edition = "2021"
description = "Assorted Rust utility functions"
authors = ["John Thorvald Wodder II <rswodlib@varonathe.org>"]
repository = "https://github.com/jwodder/rswodlib"
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]
automod = "1.0.8"
bstr = { version = "1.4.0", default-features = false, features = ["std"] }
futures = { version = "0.3.28", default-features = false, features = ["std"], optional = true }
log = "0.4.20"
num-traits = "0.2.15"
pin-project-lite = { version = "0.2.9", optional = true }
shell-words = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "sync", "time"], optional = true }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
assert_fs = "1.0.13"
predicates = "3.0.3"
rstest = { version = "0.18.1", default-features = false }
tokio = { version = "1.28.2", features = ["io-util", "macros"] }

[features]
tokio = ["dep:futures", "dep:pin-project-lite", "dep:tokio", "dep:tokio-util"]
