[package]
name = "rswodlib-generic-num"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
rstest = { version = "0.23.0", default-features = false }

[lints]
workspace = true
