[package]
name = "rswodlib-generic-num"
edition.workspace = true
description = "Operations on instances of numeric traits"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
