[package]
name = "rswodlib-partition"
edition.workspace = true
description = "Splitting a string on the first occurrence of a pattern"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
rustc_version = "0.4.1"

[lints]
workspace = true
