[package]
name = "rswodlib-tokio-btn"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }

[lints]
workspace = true
