[package]
name = "rswodlib-tokio-buffered-tasks"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[lints]
workspace = true
