[package]
name = "rswodlib-tokio-lsg"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }

[lints]
workspace = true
