[package]
name = "rswodlib-tokio-nursery"
edition.workspace = true
description = "Simple tokio-based task group/nursery"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
pin-project-lite = "0.2.12"
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
