[package]
name = "rswodlib-tokio-nursery"
edition.workspace = true
description = "Simple tokio-based task group/nursery"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { workspace = true, features = ["std"] }
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
