[package]
name = "rswodlib-tokio-received-stream"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
pin-project-lite.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }

[lints]
workspace = true
