[package]
name = "rswodlib-tokio-shutdown-group"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time"] }
tokio-util = { version = "0.7.10", features = ["rt"] }

[dev-dependencies]
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
