[package]
name = "rswodlib-tokio-shutdown-group"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
futures-util = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
