[package]
name = "rswodlib-tokio-worker-map"
edition.workspace = true
description = "Map values through asynchronous worker tasks"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-channel = "2.3.1"
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
pin-project-lite = "0.2.12"
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
