[package]
name = "rswodlib-unique-stream"
edition.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
pin-project-lite = "0.2.12"

[dev-dependencies]
tokio = { version = "1.29.0", features = ["macros", "rt"] }

[lints]
workspace = true
